# econ-embeddings

./: .gitignore  ANNOUNCEMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: embedding_candidates_concepts_concepts.parquet  embedding_candidates_concepts_hs.parquet  embedding_candidates_concepts_ipc4.parquet  embedding_candidates_concepts_naics.parquet  embedding_candidates_hs_concepts.parquet  embedding_candidates_hs_hs.parquet  embedding_candidates_hs_ipc4.parquet  embedding_candidates_hs_naics.parquet  embedding_candidates_ipc4_concepts.parquet  embedding_candidates_ipc4_hs.parquet  embedding_candidates_ipc4_ipc4.parquet  embedding_candidates_ipc4_naics.parquet  embedding_candidates_naics_concepts.parquet  embedding_candidates_naics_hs.parquet  embedding_candidates_naics_ipc4.parquet  embedding_candidates_naics_naics.parquet  embeddings_concepts.npy  embeddings_concepts_codes.parquet  embeddings_hs_codes.parquet  embeddings_ipc4_codes.parquet  embeddings_naics_codes.parquet  enriched_descriptions_concepts.parquet  enriched_descriptions_hs.parquet  enriched_descriptions_ipc4.parquet  enriched_descriptions_naics.parquet
entity_embeddings/: __init__.py  embed.py  enrich.py  load.py
examples/: generate_new_embeddings.py  quickstart.py
scripts/: generate_all_candidates.py
